# remote-scrape-w

./: .env  Cargo.toml  README.md  package-lock.json  package.json
longkey/: encryption_bg.wasm
placeholder/: encryption.mjs  encryption_bg.wasm
scripts/: BRCrypto.js  decryptCredentials.js
shortkey/: encryption.mjs  encryption_bg.wasm
src/: App.js  index.js
src/components/: .env  AuthBackend.js  AuthConfig.js  Backend.js  FinalPage.css  FinalPage.js  GmailImap.js  GmailOAuth.js  GooglePage.css  GooglePage.js  HomePage.css  HomePage.js  OutlookOAuth.js  Success.css  Success.js  createJob.js  encryptCreds.js  encryption.mjs  encryption.rs  encryption.ts  encryption_bg.wasm  globals.js  key.json
