[package]
name = "encryption"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/components/encryption.rs"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.12.3"
obfstr = "0.4.3"
wasm-bindgen = "0.2"
cipher = "0.3"
console_error_panic_hook = "0.1.6"
aes="0.7.5"
hex="0.4.3"
block-modes="0.8.1"
hex-literal="0.3.3"